force-app/main/default/objects/Wire__c/Wire__c.object-meta.xml
<CustomObject>
    <label>Wire</label>
    <nameField>
        <displayFormat>WIRE-{0000}</displayFormat>
        <label>Wire Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>