force-app/main/default/objects/Wire__c/fields/Confirmed_Wire_Amount__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Wire_Amount__c</fullName>
    <label>Confirmed Wire Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>