force-app/main/default/objects/Wire__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disposition</label>
    <referenceTo>Disposition__c</referenceTo>
    <relationshipLabel>Wires</relationshipLabel>
    <relationshipName>Wires</relationshipName>
    <type>Lookup</type>
</CustomField>