force-app/main/default/objects/Wire__c/fields/Verbal_Verification_Completed__c.field-meta.xml
<CustomField>
    <fullName>Verbal_Verification_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verbal Verification Completed</label>
    <type>Checkbox</type>
</CustomField>