force-app/main/default/objects/Wire__c/fields/Verified_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Verified_DateTime__c</fullName>
    <label>Verified DateTime</label>
    <type>DateTime</type>
</CustomField>