force-app/main/default/objects/Wire__c/fields/Verifier_Phone__c.field-meta.xml
<CustomField>
    <fullName>Verifier_Phone__c</fullName>
    <label>Verifier Phone</label>
    <type>Phone</type>
</CustomField>