force-app/main/default/objects/Wire__c/fields/Wire_Instructions_Source__c.field-meta.xml
<CustomField>
    <fullName>Wire_Instructions_Source__c</fullName>
    <label>Wire Instructions Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>